@@ -100,14 +100,23 @@ class ConfigFile: public CFEnums__
         const_RE_iterator beginRE(std::string const &re);   // 2, deprecated
         const_RE_iterator endRE() const;                    // deprecated
 
-        RE_iteratorPair beginEndRE(std::string const &re);
-        RE_iteratorPair beginEndRE();
+        RE_iteratorPair beginEndRE(std::string const &re) const;
+        RE_iteratorPair beginEndRE() const;
+
+        RE_iteratorPair beginEndRE(std::string const &re);  // deprecated
+        RE_iteratorPair beginEndRE();                       // deprecated
 
         const_iterator find(std::string const &target) const;
         const_iterator findRE(std::string const &re) const;
 
-        std::string findKey(std::string const &key, size_t count = 1);
-        std::string findKeyTail(std::string const &key, size_t count = 1);
+        std::string findKey(std::string const &key, size_t count = 1) const;
+        std::string findKeyTail(std::string const &key, size_t count = 1) 
+                                                                        const;
+
+                                                        // deprecated (2x):
+        std::string findKey(std::string const &key, size_t count = 1); 
+        std::string findKeyTail(std::string const &key, size_t count = 1);  
+
 
         size_t index(size_t lineNr);                        // 1
         size_t index(const_iterator const &iterator);       // 2
