@@ -94,6 +94,7 @@ class CSV4180
                                                 // line from the istream
 
         DataVector const &data() const;         // all csv lines
+        DataVector release();                   // release all csv lines
 
         void clear();                           // clear d_data
 
@@ -121,6 +122,7 @@ class CSV4180
 #include "nvalues.f"
 #include "header.f"
 #include "data.f"
+#include "release.f"
 #include "lastline.f"
 
 
