@@ -186,6 +186,14 @@ manpagesection(MEMBER FUNCTIONS)
         fields are stored in a vector of tt(std::string) objects, and that
         vector is added to the vector of vectors of strings that is returned
         by the tt(data) member. 
+
+    itb(std::vector<std::vector<std::string>> release())
+       The vector of vectors of fields stored inside the bf(CSV4180) object is
+        returned. After calling tt(release) the internally stored vector of
+        fields is empty.  The vector returned by tt(data) does not contain the
+        header line. If a header line was requested it can be retrieved from
+        the tt(header()) member.
+
     )
 
 manpagesection(EXAMPLE)
