@@ -2,8 +2,14 @@ bobcat (4.08.02)
 
   * CSV4180 supports configurable field separator characters.
 
-  * Fixed a flaw in the CSV4180 man-page
+  * Fixed a flaw in the CSV4180 man-page.
 
+  * Added new member 'release()' to the class CSV4180.
+
+  * Members in ConfigFile received const modifiers according to the ConfigFile
+    man-page.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 10 Sep 2017 16:41:14 +0200
 
 bobcat (4.08.01)
 
